Work on post styling, header, footer & index page.

--- a/html/index.html
+++ b/html/index.html
@@ -4,21 +4,20 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Hemphill.github.io : Blog" />
-
+    <meta name="description" content="Greg Hemphill's Blog" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="/vendor/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/stylesheet.css">
 
-    <title>Hemphill.github.io</title>
+    <title>Greg Hemphill's Blog</title>
   </head>
 
   <body>
-    <section class="container" style="width: 75%;margin: auto;border:0px solid;padding: 1em; max-width: 696px;">
-
-      <h2>Digging in on the Church of Market Share </h2>
-      <p>That’s exactly what Apple is doing. No one, or <strong>at least no one with a clue,</strong> is arguing that making the most money should be Apple’s goal. <em>(Nor is anyone arguing that market share is irrelevant; the argument is whether market share alone is of primary importance.)</em> Apple’s profits are the result of having achieved their goal: making the best products and getting them into the hands of the most people. The and there is very important. In simple terms, iOS is what you get when you try to make the best products and maximize the number of people who use them; Android devices are what you get when you try to maximize the number of people who use them.</p>
-
+    <section class="container">
+      <article>
+        <h2>Digging in on the Church of Market Share </h2>
+        <p>That’s exactly what Apple is doing. No one, or <strong>at least no one with a clue,</strong> is arguing that making the most money should be Apple’s goal. <em>(Nor is anyone arguing that market share is irrelevant; the argument is whether market share alone is of primary importance.)</em> Apple’s profits are the result of having achieved their goal: making the best products and getting them into the hands of the most people. The and there is very important. In simple terms, iOS is what you get when you try to make the best products and maximize the number of people who use them; Android devices are what you get when you try to maximize the number of people who use them.</p>
+      </article>
 
 
 
@@ -61,6 +60,7 @@
       <ol>
         <li>ol li</li>
         <li>ol li</li>
+        
       </ol>
       <!-- abbr, acronym, address, big, cite, code,
       del, dfn, em, img, ins, kbd, q, s, samp,
