--- a/index.html
+++ b/index.html
@@ -7,3 +7,12 @@ title: Greg Hemphill's Blog
     {% include listed-post.html %}
   {% endfor %}
 </section>
+
+<section class="index"></section>
+  <h1>Blog Posts</h1>
+  <ul class="posts">
+    {% for post in site.posts %}
+    <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
+</section>
