About me page, footer & more

--- a/about/index.html
+++ b/about/index.html
@@ -2,10 +2,16 @@
 layout: default
 title: Archive
 ---
-
+<img src="/images/about/cool_dudes_640x640.jpeg" class="about_picture">
+<h4>About</h4>
+<h1>Greg Hemphill</h1>
 <p>
   Full stack web geek, pragmatic programmer, responsive designer, single hot dad, 
-  occasional artist, amateur photographer and VP of Development at Webstop.
+  occasional artist, amateur photographer and VP of IT at 
+  <a href="http://webstop.com/">Webstop</a>.
 </p>
 
+<p>Want to connect or learn more? <em>Follow the social media links in the footer... 
+  it's what they are for, just sayin'
+</p>
 
