--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@ title: "Greg Hemphill's Blog"
   {% endfor %}
 </section>
 
-<section class="index"></section>
-  <h1>Blog Posts</h1>
-  <ul class="posts">
+<section class="articles_index">
+  <h1>More Articles</h1>
+  <ul class="more_articles">
     {% for post in site.posts %}
-    <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    <li><span>{{ post.date | date: "%b %d, %Y"  }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
 </section>
